added normalize.css, normalize.scss, patterns, components

--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -1,2 +1,7 @@
-@import "base/base"; 
+@import "normalize";
+// @import "bourbon/bourbon";
+// @import "neat/neat";
+@import "base/base";
+// @import "components/*";
+@import "patterns/*";
 
