Added components partials, bourbon, neat

--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -1,7 +1,7 @@
 @import "normalize";
-// @import "bourbon/bourbon";
-// @import "neat/neat";
+@import "../../node_modules/bourbon/app/assets/stylesheets/bourbon";
+@import "../../node_modules/bourbon-neat/app/assets/stylesheets/neat";
 @import "base/base";
-// @import "components/*";
-@import "patterns/*";
+@import "components/components";
+@import "patterns/patterns";
 
