--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,3 +1,21 @@
+html {
+  box-sizing: border-box; }
+
+*, *::after, *::before {
+  box-sizing: inherit; }
+
 p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.2em; }
+
+body {
+  margin: 0 auto;
+  text-align: center; }
+
+nav {
+  margin: 0 2em;
+  text-align: right; }
+  nav li {
+    display: inline-block; }
+  nav a {
+    text-decoration: none; }
