--- a/site/scss/patterns/_nav.scss
+++ b/site/scss/patterns/_nav.scss
@@ -1,3 +1,11 @@
-li {
-	display: inline-block;
-}
+
+nav {
+	margin: 0 2em;
+	text-align: right;
+	li {
+		display: inline-block; 
+	}
+		a {
+			text-decoration: none;
+		}
+	}
