Reformatted scss folder, added layout partial, changed margins, some fonts

--- a/site/scss/_variables.scss
+++ b/site/scss/_variables.scss
@@ -1,2 +1,7 @@
+// Media Queries
+$tablet: 'min-width: 768px';
+$desktop: 'min-width: 1024px';
+
+// Typography
 $sans-serif-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $serif-font: Georgia, Times, 'Times New Roman', serif;
