--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -4,18 +4,34 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
-p {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.2em; }
-
 body {
-  margin: 0 auto;
+  margin: 1em;
   text-align: center; }
+  body img {
+    width: 12em; }
+
+@media screen and (min-width: 640px) {
+  body img {
+    width: 17em; } }
+
+ul {
+  padding: 0; }
+  ul li {
+    display: inline-block; }
+    ul li a {
+      text-decoration: none; }
 
 nav {
   margin: 0 2em;
   text-align: right; }
-  nav li {
-    display: inline-block; }
-  nav a {
-    text-decoration: none; }
+
+header h1 {
+  font-size: 3em;
+  font-family: Georgia, Times, "Times New Roman", serif; }
+
+.intro p {
+  font-style: italic; }
+
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.2em; }
