--- a/site/scss/_lists.scss
+++ b/site/scss/_lists.scss
@@ -1,11 +1,11 @@
+ul {
+	padding: 0;
 
-nav {
-	margin: 0 2em;
-	text-align: right;
 	li {
 		display: inline-block; 
-	}
+
 		a {
 			text-decoration: none;
 		}
 	}
+}
