--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -1,7 +1,9 @@
 @import "normalize";
 @import "../../node_modules/bourbon/app/assets/stylesheets/bourbon";
 @import "../../node_modules/bourbon-neat/app/assets/stylesheets/neat";
-@import "base/base";
-@import "components/components";
-@import "patterns/patterns";
-
+@import "variables";
+@import "layout";
+@import "lists";
+@import "hero";
+@import "nav";
+@import "typography";
