--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -11,6 +11,23 @@ body {
     width: 12em; }
 
 @media screen and (min-width: 640px) {
+  body .features {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto; }
+    body .features::after {
+      clear: both;
+      content: "";
+      display: table; }
+    body .features li {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 31.76157%; }
+      body .features li:last-child {
+        margin-right: 0; } }
+
+@media screen and (min-width: 1024px) {
   body img {
     width: 17em; } }
 
@@ -26,12 +43,22 @@ nav {
   text-align: right; }
 
 header h1 {
-  font-size: 3em;
-  font-family: Georgia, Times, "Times New Roman", serif; }
+  font-size: 2em;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif; }
+
+h2 {
+  font-size: 1em; }
 
 .intro p {
   font-style: italic; }
 
 p {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.2em; }
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+@media screen and (min-width: 640px) {
+  header h1 {
+    font-size: 3em; }
+  h2 {
+    font-size: 1.2em; }
+  p {
+    font-size: 1.2em; } }
