--- a/site/scss/_typography.scss
+++ b/site/scss/_typography.scss
@@ -1,6 +1,10 @@
 header h1 {
-	font-size: 3em;
-	font-family: $serif-font;
+	font-size: 2em;
+	font-family: $helvetica;
+}
+
+h2 {
+	font-size: 1em;
 }
 
 .intro p {
@@ -9,7 +13,21 @@ header h1 {
 
 p {
 	font-family: $sans-serif-font;
-	font-size: 1.2em;
+	// font-size: 0.7em;
+}
+
+@media screen and (min-width: 640px) {
+	header h1 {
+		font-size: 3em;
+	}
+
+	h2 {
+		font-size: 1.2em;
+	}
+
+	p {
+		font-size: 1.2em;
+	}
 }
 
 
