--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -6,11 +6,21 @@ html {
 
 body {
   margin: 1em;
-  text-align: center; }
-  body img {
-    width: 12em; }
+  text-align: center;
+  background-color: #bdc3c7; }
+  body nav, body section {
+    margin: 3em auto; }
+  body .features li {
+    margin-bottom: 1em; }
+    body .features li img {
+      width: 12em;
+      margin-bottom: 1em; }
+  body footer div {
+    margin: 3em; }
+  body footer p {
+    margin: 2em; }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 768px) {
   body .features {
     max-width: 100%;
     margin-left: auto;
@@ -36,7 +46,9 @@ ul {
   ul li {
     display: inline-block; }
     ul li a {
-      text-decoration: none; }
+      padding: 0.5em 0.5em;
+      border-radius: 0.3em;
+      background-color: #1abc9c; }
 
 nav {
   margin: 0 2em;
@@ -49,16 +61,29 @@ header h1 {
 h2 {
   font-size: 1em; }
 
+a {
+  text-decoration: none;
+  color: #ecf0f1; }
+
 .intro p {
   font-style: italic; }
 
 p {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 0.8em; }
 
-@media screen and (min-width: 640px) {
+.action a {
+  font-size: 1.5em;
+  padding: 0.5em 0.5em;
+  border-radius: 0.3em;
+  background-color: #1abc9c; }
+
+@media screen and (min-width: 768px) {
   header h1 {
     font-size: 3em; }
   h2 {
     font-size: 1.2em; }
   p {
-    font-size: 1.2em; } }
+    font-size: 1.2em; }
+  .action a {
+    font-size: 2em; } }
