--- a/site/scss/_layout.scss
+++ b/site/scss/_layout.scss
@@ -1,13 +1,34 @@
 body {
 	margin: 1em;
 	text-align: center;
+	background-color: $background-color;
 
-	img {
-		width: 12em;
+	nav, section {
+		margin: 3em auto;
 	}
+	.features {
+		li {
+			margin-bottom: 1em;
+
+			img {
+				width: 12em;
+				margin-bottom: 1em;
+			}
+		}
+	}
+	footer {
+		div {
+			margin: 3em;
+		}
+
+		p {
+			margin: 2em;
+		}
+	}
+
 }
 
-@media screen and (min-width: 640px) {
+@media screen and ($tablet) {
 	body {
 		.features {
 			@include outer-container(100%);
@@ -19,7 +40,7 @@ body {
 	}
 } 
 
-@media screen and (min-width: 1024px){
+@media screen and ($desktop){
 	body {
 		img {
 			width: 17em;
