--- a/site/scss/_typography.scss
+++ b/site/scss/_typography.scss
@@ -7,16 +7,31 @@ h2 {
 	font-size: 1em;
 }
 
+a {
+	text-decoration: none;
+	color: #ecf0f1;
+}
+
 .intro p {
 	font-style: italic;
 }
 
 p {
 	font-family: $sans-serif-font;
-	// font-size: 0.7em;
+	font-size: 0.8em;
 }
 
-@media screen and (min-width: 640px) {
+.action {
+	a {
+		font-size: 1.5em;
+		@include button-style;
+		background-color: $button-background-color;
+	}
+}
+
+
+// Media Queries
+@media screen and ($tablet) {
 	header h1 {
 		font-size: 3em;
 	}
@@ -27,6 +42,12 @@ p {
 
 	p {
 		font-size: 1.2em;
+	}
+
+	.action {
+		a {
+			font-size: 2em;
+		}
 	}
 }
 
