--- a/site/scss/_variables.scss
+++ b/site/scss/_variables.scss
@@ -2,6 +2,16 @@
 $tablet: 'min-width: 768px';
 $desktop: 'min-width: 1024px';
 
+//Layout
+$background-color: #bdc3c7;
+
 // Typography
 $sans-serif-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $serif-font: Georgia, Times, 'Times New Roman', serif;
+
+// Buttons
+@mixin button-style {
+	padding: 0.5em 0.5em;
+	border-radius: 0.3em;
+}
+$button-background-color: #1abc9c;
