--- a/site/scss/_layout.scss
+++ b/site/scss/_layout.scss
@@ -1,4 +1,5 @@
 body {
+
 	margin: 1em;
 	text-align: center;
 	background-color: $background-color;
@@ -11,10 +12,11 @@ body {
 			margin-bottom: 1em;
 
 			img {
-				width: 12em;
+				max-width: 100%;
 				margin-bottom: 1em;
 			}
 		}
+	}
 	}
 	footer {
 		div {
