--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -11,9 +11,10 @@ body {
   body nav, body section {
     margin: 3em auto; }
   body .features li {
-    margin-bottom: 1em; }
+    margin-bottom: 1em;
+    margin: auto; }
     body .features li img {
-      width: 12em;
+      max-width: 100%;
       margin-bottom: 1em; }
   body footer div {
     margin: 3em; }
@@ -44,7 +45,8 @@ body {
 ul {
   padding: 0; }
   ul li {
-    display: inline-block; }
+    display: inline-block;
+    margin: 0.6em; }
     ul li a {
       padding: 0.5em 0.5em;
       border-radius: 0.3em;
@@ -55,25 +57,26 @@ nav {
   text-align: right; }
 
 header h1 {
-  font-size: 2em;
+  font-size: 3em;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif; }
 
 h2 {
-  font-size: 1em; }
+  font-size: 1.8em; }
 
 a {
   text-decoration: none;
-  color: #ecf0f1; }
+  color: #ecf0f1;
+  font-size: 1.3em; }
 
 .intro p {
   font-style: italic; }
 
 p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 0.8em; }
+  font-size: 1.5em; }
 
 .action a {
-  font-size: 1.5em;
+  font-size: 1.8em;
   padding: 0.5em 0.5em;
   border-radius: 0.3em;
   background-color: #1abc9c; }
