--- a/site/scss/_lists.scss
+++ b/site/scss/_lists.scss
@@ -3,7 +3,7 @@ ul {
 
 	li {
 		display: inline-block;
-		// padding: 0 0.6em
+		margin: 0.6em;
 		a {
 			@include button-style;
 			background-color: $button-background-color;
