Removed old action button, changed animation

--- a/site/scss/_variables.scss
+++ b/site/scss/_variables.scss
@@ -11,7 +11,7 @@ $serif-font: Georgia, Times, 'Times New Roman', serif;
 
 // Buttons
 @mixin button-style {
-	padding: 0.5em 0.5em;
+	padding: 0.5em;
 	border-radius: 0.3em;
 }
 $button-background-color: #1abc9c;
