--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -91,6 +91,9 @@ p {
   .action a {
     font-size: 2em; } }
 
+.action .btn-action {
+  display: inline-block; }
+
 .action input {
   padding: 0.5em;
   border-radius: 0.3em;
