--- a/site/scss/_buttons.scss
+++ b/site/scss/_buttons.scss
@@ -1,9 +1,10 @@
 .action {
-	// .btn-action {
+	.btn-action {
+		display: inline-block;
 	// -webkit-transform: translateX(20px);
 	// -webkit-transform-origin: 100% 100%;
 	// transform-origin: 100% 100%;
-	// }
+	}
 
 	input{
 		@include button-style;
