--- a/site/scss/_variables.scss
+++ b/site/scss/_variables.scss
@@ -1,6 +1,8 @@
 // Media Queries
 $tablet: 'min-width: 768px';
 $desktop: 'min-width: 1024px';
+$social-tweak1: 'min-width: 453px';
+$social-tweak2: 'min-width: 333px';
 
 //Layout
 $background-color: #bdc3c7;
