--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -17,9 +17,9 @@ body {
       max-width: 100%;
       margin-bottom: 1em; }
   body footer div {
-    margin: 3em; }
-  body footer p {
-    margin: 2em; }
+    margin: 3em 0; }
+    body footer div h4 {
+      margin-bottom: 2em; }
 
 @media screen and (min-width: 768px) {
   body .features {
@@ -89,6 +89,9 @@ p {
   padding: 0.5em;
   border-radius: 0.3em;
   background-color: #1abc9c; }
+
+footer p {
+  font-size: 1em; }
 
 @media screen and (min-width: 768px) {
   header h1 {
