--- a/site/scss/_layout.scss
+++ b/site/scss/_layout.scss
@@ -20,11 +20,14 @@ body {
 	}
 	footer {
 		div {
-			margin: 3em;
+			margin: 3em 0;
+			h4{
+				margin-bottom: 2em;
+			}
 		}
 
 		p {
-			margin: 2em;
+			// margin: 2em;
 		}
 	}
 }
