--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -7,7 +7,14 @@ html {
 body {
   margin: 1em;
   text-align: center;
+  background: url(../img/bird-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   background-color: #bdc3c7; }
+  @media screen and (min-width: 768px) {
+    body {
+      background: url(../img/white-brick.jpg); } }
   body nav, body section {
     margin: 3em auto; }
   body .features li {
@@ -65,32 +72,32 @@ nav {
   margin: 0 2em;
   text-align: right; }
 
-header h1 {
+body header h1 {
   font-size: 3em;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif; }
 
-h2 {
+body h2 {
   font-size: 1.8em; }
 
-a, .action input {
+body a, body .action input {
   text-decoration: none;
   color: #ecf0f1;
   font-size: 1em; }
 
-.intro p {
+body .intro p {
   font-style: italic; }
 
-p {
+body p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.5em; }
 
-.action a {
+body .action a {
   font-size: 1.8em;
   padding: 0.5em;
   border-radius: 0.3em;
   background-color: #1abc9c; }
 
-footer p {
+body footer p {
   font-size: 1em; }
 
 @media screen and (min-width: 768px) {
