Added title-font, changed some font sizes, new background images, body width/height adjustment

--- a/site/scss/_variables.scss
+++ b/site/scss/_variables.scss
@@ -8,6 +8,7 @@ $social-tweak2: 'min-width: 333px';
 $background-color: #bdc3c7;
 
 // Typography
+$title-font: 'Righteous', serif;
 $sans-serif-font: 'Roboto', Helvetica, Arial, sans-serif;
 $serif-font: Georgia, Times, 'Times New Roman', serif;
 $alt-font: 'Helvetica Neue', Helvetica, sans-serif;
