--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -5,16 +5,18 @@ html {
   box-sizing: inherit; }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 1em;
   text-align: center;
-  background: url(../img/bird-mobile.jpg);
+  background-image: url(../img/simple-bg-med.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   background-color: #bdc3c7; }
   @media screen and (min-width: 768px) {
     body {
-      background: url(../img/white-brick.jpg); } }
+      background-image: url(../img/simple-bg-large.jpg); } }
   body nav, body section {
     margin: 3em auto; }
   body .features li {
@@ -22,7 +24,9 @@ body {
     margin: auto; }
     body .features li img {
       max-width: 100%;
-      margin-bottom: 1em; }
+      margin-bottom: 0.5em; }
+    body .features li h2 {
+      margin-bottom: 2em; }
   body footer div {
     margin: 3em 0; }
     body footer div h4 {
@@ -74,7 +78,8 @@ nav {
 
 body header h1 {
   font-size: 3em;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif; }
+  font-family: "Righteous", serif;
+  text-shadow: 1px 1px; }
 
 body h2 {
   font-size: 1.8em; }
@@ -101,14 +106,16 @@ body footer p {
   font-size: 1em; }
 
 @media screen and (min-width: 768px) {
-  header h1 {
-    font-size: 3em; }
-  h2 {
+  body header h1 {
+    font-size: 4em; }
+  body h2 {
+    font-size: 1.4em; }
+  body p {
     font-size: 1.2em; }
-  p {
-    font-size: 1.2em; }
-  .action a {
-    font-size: 2em; } }
+  body .action a {
+    font-size: 2em; }
+  body footer p {
+    font-size: 1.2em; } }
 
 .action .btn-action {
   display: inline-block; }
