--- a/site/scss/_layout.scss
+++ b/site/scss/_layout.scss
@@ -1,13 +1,14 @@
 body {
-
+	width: 100%;
+	height: 100%;
 	margin: 1em;
 	text-align: center;
-	background: url(../img/bird-mobile.jpg);
+	background-image: url(../img/simple-bg-med.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
 	@media screen and ($tablet){
-		background: url(../img/white-brick.jpg);
+		background-image: url(../img/simple-bg-large.jpg);
 	}
 	background-color: $background-color;
 
@@ -21,7 +22,10 @@ body {
 
 			img {
 				max-width: 100%;
-				margin-bottom: 1em;
+				margin-bottom: 0.5em;
+			}
+			h2 {
+				margin-bottom: 2em;
 			}
 		}
 	}
