--- a/site/scss/_typography.scss
+++ b/site/scss/_typography.scss
@@ -2,7 +2,8 @@ body {
 	// color: white;
 	header h1 {
 		font-size: 3em;
-		font-family: $helvetica;
+		font-family: $title-font;
+		text-shadow: 1px 1px;
 	}
 
 	h2 {
@@ -40,21 +41,27 @@ body {
 
 // Media Queries
 @media screen and ($tablet) {
-	header h1 {
-		font-size: 3em;
-	}
+	body{
+		header h1 {
+			font-size: 4em;
+		}
 
-	h2 {
-		font-size: 1.2em;
-	}
+		h2 {
+			font-size: 1.4em;
+		}
 
-	p {
-		font-size: 1.2em;
-	}
+		p {
+			font-size: 1.2em;
+		}
 
-	.action {
-		a {
-			font-size: 2em;
+		.action {
+			a {
+				font-size: 2em;
+			}
+		}
+
+		footer p {
+			font-size: 1.2em;
 		}
 	}
 }
