--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -105,6 +105,15 @@ body .action a {
 body footer p {
   font-size: 1em; }
 
+body footer #copyw a {
+  color: black;
+  padding: 0.2em;
+  border-radius: 0.5em; }
+
+body footer #copyw :hover {
+  background-color: Grey;
+  color: white; }
+
 @media screen and (min-width: 768px) {
   body header h1 {
     font-size: 4em; }
