--- a/site/scss/_typography.scss
+++ b/site/scss/_typography.scss
@@ -33,8 +33,21 @@ body {
 		}
 	}
 
-	footer p {
-		font-size: 1em;
+	footer {
+		p {
+			font-size: 1em;
+		}
+		#copyw {
+			a {
+				color: black;
+				padding: 0.2em;
+				border-radius: 0.5em;
+			}
+			:hover{
+				background-color: Grey;
+				color: white;
+			}
+		}
 	}
 }
 
