--- a/site/scss/_layout.scss
+++ b/site/scss/_layout.scss
@@ -1,7 +1,7 @@
 body {
-	width: 100%;
+	// width: 100%;
 	height: 100%;
-	margin: 1em;
+	// margin: 1em;
 	text-align: center;
 	background-image: url(../img/simple-bg-med.jpg);
 	background-repeat: no-repeat;
