--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -77,7 +77,10 @@ nav {
 body header h1 {
   font-size: 3em;
   font-family: "Righteous", serif;
-  text-shadow: 1px 1px; }
+  opacity: 0.2;
+  color: white;
+  text-shadow: -1px 0 black, 0 3px black, 1px 0 black, 0 -1px black;
+  opacity: 0.6; }
 
 body h2 {
   font-size: 1.8em; }
@@ -99,6 +102,9 @@ body .action a {
   padding: 0.5em;
   border-radius: 0.3em;
   background-color: #1abc9c; }
+
+body footer h2 {
+  font-style: italic; }
 
 body footer p {
   font-size: 1em; }
