--- a/site/scss/_typography.scss
+++ b/site/scss/_typography.scss
@@ -3,7 +3,11 @@ body {
 	header h1 {
 		font-size: 3em;
 		font-family: $title-font;
-		text-shadow: 1px 1px;
+		opacity: 0.2;
+		color: white;
+		text-shadow: -1px 0 black, 0 3px black, 1px 0 black, 0 -1px black;
+		opacity: 0.6;
+
 	}
 
 	h2 {
@@ -34,6 +38,9 @@ body {
 	}
 
 	footer {
+		h2 {
+			font-style: italic;
+		}
 		p {
 			font-size: 1em;
 		}
