Landing Page: Updated to reflect Street Fighter theme. Flappy Bird: Tweaked UI height/width

--- a/flappy-bird/css/main.css
+++ b/flappy-bird/css/main.css
@@ -10,8 +10,8 @@ canvas#main-canvas {
 }
 
 div#overlay {
-	width: 14%;
-	height: 35%;
+	width: 10em;
+	height: 9em;
     position: absolute;
     z-index: 1;
     top: 0;
