Added pause button for mobile

--- a/flappy-bird/css/main.css
+++ b/flappy-bird/css/main.css
@@ -25,6 +25,16 @@ div#overlay {
     font-family: 'Roboto', sans-serif;
 }
 
+/*#btn-pause {
+    display: none;
+}*/
+
 #images {
 	display: none;
+}
+
+@media and screen(min-width: 768px){
+    #btn-pause {
+        display: none;
+    }
 }
