--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,140 +1,6 @@
+@import url(../template.css);
 html {
   box-sizing: border-box; }
 
 *, *::after, *::before {
   box-sizing: inherit; }
-
-body {
-  height: 100%;
-  text-align: center;
-  background-image: url(../img/simple-bg-med.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-color: #bdc3c7; }
-  @media screen and (min-width: 768px) {
-    body {
-      background-image: url(../img/simple-bg-large.jpg); } }
-  body nav, body section {
-    margin: 3em auto; }
-  body .features li {
-    margin-bottom: 1em;
-    margin: auto; }
-    body .features li img {
-      max-width: 100%;
-      margin-bottom: 0.5em; }
-    body .features li h2 {
-      margin-bottom: 2em; }
-  body footer div {
-    margin: 3em 0; }
-    body footer div h4 {
-      margin-bottom: 2em; }
-
-@media screen and (min-width: 768px) {
-  body .features {
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto; }
-    body .features::after {
-      clear: both;
-      content: "";
-      display: table; }
-    body .features li {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%; }
-      body .features li:last-child {
-        margin-right: 0; } }
-
-@media screen and (min-width: 1024px) {
-  body img {
-    width: 17em; } }
-
-ul {
-  padding: 0; }
-  ul li {
-    display: inline-block;
-    margin: 0.6em; }
-    ul li a {
-      padding: 0.5em;
-      border-radius: 0.3em;
-      background-color: #1abc9c; }
-
-.social li {
-  margin: 2.5em;
-  display: block; }
-
-@media screen and (min-width: 453px) {
-  .social li {
-    margin: 0.4em;
-    display: inline-block; } }
-
-nav {
-  margin: 0 2em;
-  text-align: right; }
-
-body header h1 {
-  font-size: 3em;
-  font-family: "Righteous", serif;
-  opacity: 0.2;
-  color: white;
-  text-shadow: -1px 0 black, 0 3px black, 1px 0 black, 0 -1px black;
-  opacity: 0.6; }
-
-body h2 {
-  font-size: 1.8em; }
-
-body a, body .action input {
-  text-decoration: none;
-  color: #ecf0f1;
-  font-size: 1em; }
-
-body .intro p {
-  font-style: italic; }
-
-body p {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
-  font-size: 1.5em; }
-
-body .action a {
-  font-size: 1.8em;
-  padding: 0.5em;
-  border-radius: 0.3em;
-  background-color: #1abc9c; }
-
-body footer h2 {
-  font-style: italic; }
-
-body footer p {
-  font-size: 1em; }
-
-body footer #copyw a {
-  color: black;
-  padding: 0.2em;
-  border-radius: 0.5em; }
-
-body footer #copyw :hover {
-  background-color: Grey;
-  color: white; }
-
-@media screen and (min-width: 768px) {
-  body header h1 {
-    font-size: 4em; }
-  body h2 {
-    font-size: 1.4em; }
-  body p {
-    font-size: 1.2em; }
-  body .action a {
-    font-size: 2em; }
-  body footer p {
-    font-size: 1.2em; } }
-
-.action .btn-action {
-  display: inline-block; }
-
-.action input {
-  padding: 0.5em;
-  border-radius: 0.3em;
-  font-size: 2em;
-  background-color: #1abc9c; }
