--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -1,10 +1,11 @@
 @import "normalize";
 @import "../../node_modules/bourbon/app/assets/stylesheets/bourbon";
 @import "../../node_modules/bourbon-neat/app/assets/stylesheets/neat";
+@import "../template.css";
 @import "variables";
-@import "layout";
-@import "lists";
-@import "hero";
-@import "nav";
-@import "typography";
-@import "buttons";
+// @import "layout";
+// @import "lists";
+// @import "hero";
+// @import "nav";
+// @import "typography";
+// @import "buttons";
