--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "../../node_modules/bourbon-neat/app/assets/stylesheets/neat";
 @import "../template.css";
 @import "variables";
+@import "carousel";
 // @import "layout";
 // @import "lists";
 // @import "hero";
