--- a/site/scss/_base.scss
+++ b/site/scss/_base.scss
@@ -1,6 +1,6 @@
 @import "variables";
-@import "forms";
-@import "lists";
+// @import "forms";
+// @import "lists";
 @import "buttons";
-@import "typography";
+// @import "typography";
 @import "carousel";
