--- a/site/scss/_layout.scss
+++ b/site/scss/_layout.scss
@@ -1,65 +1,17 @@
 body {
-	// width: 100%;
-	height: 100%;
-	// margin: 1em;
-	text-align: center;
-	background-image: url(../img/simple-bg-med.jpg);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	@media screen and ($tablet){
-		background-image: url(../img/simple-bg-large.jpg);
-	}
-	background-color: $background-color;
-
-	nav, section {
-		margin: 3em auto;
-	}
-	.features {
-		li {
-			margin-bottom: 1em;
-			margin: auto;
-
-			img {
-				max-width: 100%;
-				margin-bottom: 0.5em;
-			}
-			h2 {
-				margin-bottom: 2em;
-			}
-		}
-	}
-	footer {
-		div {
-			margin: 3em 0;
-			h4{
-				margin-bottom: 2em;
-			}
-		}
-
-		p {
-			// margin: 2em;
+	.section-4 {
+		.sf-image {
+			max-width: 20em;
 		}
 	}
 }
 
-@media screen and ($tablet) {
+@media screen and ("min-width: 466px"){
 	body {
-		.features {
-			@include outer-container(100%);
-			li {
-				@include span-columns(4);
-
-			}
+	.section-4 {
+		.sf-image {
+			max-width: 100%;
 		}
 	}
-} 
-
-@media screen and ($desktop){
-	body {
-		img {
-			width: 17em;
-		}
-	}
-
+}
 }
