Added about page, changed nav, other tweaks

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -15,6 +15,9 @@ body .section-4 .sf-image {
 .social-link {
   color: black; }
 
+#about h1 {
+  text-align: center; }
+
 .jssorb05 {
   position: absolute; }
 
