--- a/site/scss/_base.scss
+++ b/site/scss/_base.scss
@@ -3,6 +3,7 @@
 // @import "forms";
 // @import "lists";
 @import "buttons";
-// @import "typography";
+@import "typography";
 @import "about";
 @import "carousel";
+@import "footer";
