--- a/site/scss/_base.scss
+++ b/site/scss/_base.scss
@@ -1,7 +1,6 @@
 @import "variables";
+@import "font-awesome";
 @import "layout";
-// @import "forms";
-// @import "lists";
 @import "buttons";
 @import "typography";
 @import "about";
