--- a/flappy-bird/css/main.css
+++ b/flappy-bird/css/main.css
@@ -7,6 +7,7 @@ html, body {
 canvas#main-canvas {
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 div#obs-countdown {
@@ -41,6 +42,16 @@ div#overlay {
     border-radius: 1em;
     /*Typography*/
     font-family: "Roboto", sans-serif;
+}
+
+div#overlay-cover {
+    /*Layout*/
+   /* width: 10em;
+    height: 6.5em;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;*/
 }
 
 #btn-pause {
