--- a/site/src/scss/styles.scss
+++ b/site/src/scss/styles.scss
@@ -1,6 +1,4 @@
 @import "normalize";
-@import "../../node_modules/bourbon/app/assets/stylesheets/bourbon";
-@import "../../node_modules/bourbon-neat/app/assets/stylesheets/neat";
-@import "../template.css";
+@import "template";
 @import "base";
 
